Atualizando páginas das disciplinas

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,7 +21,19 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 4** (11/nov)
+<br><br>
+* **Aula 3** (07/nov)
+  + Algoritmos de ordenação quadráticos
+  + Estabilidade em algoritmos de ordenação
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/ordena.html" target="_blank">Algoritmos de ordenação elementares</a>
+<br><br>
 * **Aula 2** (04/nov)
+  + Listas encadeadas
+  + Introdução à análise de complexidade
+  + *Leitura recomendada*:
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/lista.html" target="_blank">Listas encadeadas</a>
+    + <a href="https://www.ime.usp.br/~pf/analise_de_algoritmos/aulas/Oh.html" target="_blank">Comparação assintótica de funções</a>
 <br><br>
 * **Aula 1** (31/out)
   + Apresentação da disciplina
@@ -35,3 +47,9 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
       + <a href="https://web.microsoftstream.com/video/d13206d2-ad31-4343-9515-8b7a075314da" target="_blank">Alocação dinâmica de memória</a>
       + <a href="https://web.microsoftstream.com/video/24a54429-1540-4d47-b5b1-f75a035d2f57" target="_blank">Ponteiros e vetores</a>
       + <a href="https://web.microsoftstream.com/video/3fa477cc-bd11-47ca-ba8c-ee7e5ba470f5" target="_blank">Ponteiros para funções</a>
+
+## Avaliações formativas
+
++ **Avaliação Formativa 1**: Revisão de listas encadeadas e ordenação simples
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f1_2022_2" target="_blank">CD-MOJ</a>
+  + Entrega: até 18/nov às 23:59
