--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,7 +27,17 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 4** (09/nov)
+<br><br>
 * **Aula 3** (07/nov)
+  + Linguagem de montagem
+    + Instruções aritméticas
+    + Registradores
+  + *Leitura recomendada*:
+    + Seções 2.1 e 2.2
+    + <a href="https://docs.microsoft.com/pt-br/windows/wsl/install" target="_blank">Como instalar o WSL</a>
+    + <a href="https://spimsimulator.sourceforge.net/" target="_blank">Simulador SPIM</a>
+    + <a href="https://learn.microsoft.com/pt-br/windows/wsl/tutorials/wsl-vscode">Usando VSCode e WSL</a>
 <br><br>
 * **Aula 2** (04/nov)
   + Introdução à arquitetura de computadores
