Atualizando páginas das disciplinas

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,7 +21,17 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 5** (18/nov)
+* ~~**Aula 5** (14/nov)~~
+<br><br>
 * **Aula 4** (11/nov)
+  + Impressão em lista encadeada
+  + Ordenação por intercalação
+    + Algoritmo
+    + Complexidade
+  + *Leitura recomendada*
+    + <a href="https://www.brunoribas.com.br/eda2/2022-1/apostila/mergesort.html" target="_blank">Algoritmo de Ordenação por Intercalação</a> (Prof. Bruno Ribas)
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/mrgsrt.html" target="_blank">Mergesort: ordenação por intercalação</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 3** (07/nov)
   + Algoritmos de ordenação quadráticos
