--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,7 +27,16 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
-* **Aula 4** (09/nov)
+* **Aula 5** (18/nov)
+* ~~**Aula 5** (14/nov)~~
+<br><br>
+* **Aula 4** (11/nov)
+  + Estrutura de um programa em assembly MIPS
+  + Pseudoinstruções úteis
+  + *Syscalls*
+  + *Leitura recomendada*:
+    + <a href="2_linguagem_montagem_aula-01.pdf" target="_blank">Slides</a>
+    + <a href="https://www.doc.ic.ac.uk/lab/secondyear/spim/node8.html" target="_blank">Tabela de *syscalls*</a>
 <br><br>
 * **Aula 3** (07/nov)
   + Linguagem de montagem
