--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,8 +21,16 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 8** (28/nov)
+  + Jogo do Brasil na Copa (16h)
+<br><br>
+* **Aula 7** (25/nov)
+<br><br>
+* **Aula 6** (21/nov)
+  + Professor em licença paternidade
+<br><br>
 * **Aula 5** (18/nov)
-* ~~**Aula 5** (14/nov)~~
+  + Professor em licença paternidade
 <br><br>
 * **Aula 4** (11/nov)
   + Impressão em lista encadeada
