Atualizando páginas das disciplinas

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,15 +21,23 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
-* **Aula 8** (28/nov)
+* **Aula 6** (05/dez)
+<br><br>
+* ~~**Aula 6** (02/dez)~~
   + Jogo do Brasil na Copa (16h)
 <br><br>
-* **Aula 7** (25/nov)
+* ~~**Aula 6** (28/nov)~~
+  + Jogo do Brasil na Copa (16h)
 <br><br>
-* **Aula 6** (21/nov)
+* **Aula 5** (25/nov)
+  + Ordenação por intercalação
+    + Revisão
+    + Função `intercala`
+<br><br>
+* ~~**Aula 5** (21/nov)~~
   + Professor em licença paternidade
 <br><br>
-* **Aula 5** (18/nov)
+* ~~**Aula 5** (18/nov)~~
   + Professor em licença paternidade
 <br><br>
 * **Aula 4** (11/nov)
