--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,7 +27,12 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
-* **Aula 7** (25/nov)
+* **Aula 6** (02/dez)
+<br><br>
+* ~~**Aula 6** (28/nov)~~
+  + Professor em licença paternidade
+<br><br>
+* **Aula 5** (25/nov)
   + Instruções de acesso à memória
   + Instruções imediatas
   + Representação de inteiros com e sem sinal
@@ -35,10 +40,10 @@ Todas as referências das aulas desta disciplina são do livro:
     + Seções 2.3 e 2.4
     + <a href="2_linguagem_montagem_aula-02.pdf" target="_blank">Slides</a>
 <br><br>
-* **Aula 6** (21/nov)
+* ~~**Aula 5** (21/nov)~~
   + Professor em licença paternidade
 <br><br>
-* **Aula 5** (18/nov)
+* ~~**Aula 5** (18/nov)~~
   + Professor em licença paternidade
 <br><br>
 * **Aula 4** (11/nov)
