Atualizando página de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,7 +27,19 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 7** (12/dez)
+<br><br>
+* ~~**Aula 7** (09/dez)~~
+  + Jogo do Brasil na Copa (12h)
+<br><br>
+* ~~**Aula 7** (05/dez)~~
+  + Professor em licença paternidade
+<br><br>
 * **Aula 6** (02/dez)
+  + Formato das instruções (R e I)
+  + Instruções lógicas e de deslocamento
+  + *Leitura recomendada*:
+    + Seções 2.5 e 2.6
 <br><br>
 * ~~**Aula 6** (28/nov)~~
   + Professor em licença paternidade
