Atualizando página de EDA-2

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,7 +21,21 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
-* **Aula 6** (05/dez)
+* **Aula 7** (16/dez)
+<br><br>
+* **Aula 6** (12/dez)
+  + Quicksort
+    + Função `separa`
+    + Complexidade (pior caso)
+  + *Leitura recomendada*:
+    + <a href="https://visualgo.net/en/sorting" target="_blank">Visualgo</a>: visualize o algoritmo rodando
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/quick.html" target="_blank">Quicksort</a> (Prof. Paulo Feofiloff)
+<br><br>
+* ~~**Aula 6** (09/dez)~~
+  + Jogo do Brasil na Copa (16h)
+<br><br>
+* ~~**Aula 6** (05/dez)~~
+  + Jogo do Brasil na Copa (16h)
 <br><br>
 * ~~**Aula 6** (02/dez)~~
   + Jogo do Brasil na Copa (16h)
