--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,7 +27,25 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 11** (09/jan)
+  + Avaliação Somativa 1
+<br><br>
+* **Aula 10** (06/jan)
+<br><br>
+* **Aula 9** (19/dez)
+  + Caracteres
+  + *Leitura recomendada*:
+    + Seção 2.9
+<br><br>
+* **Aula 8** (16/dez)
+  + Procedimentos
+  + *Leitura recomendada*:
+    + Seção 2.8
+<br><br>
 * **Aula 7** (12/dez)
+  + Desvios condicionais e laços
+  + *Leitura recomendada*:
+    + Seção 2.7
 <br><br>
 * ~~**Aula 7** (09/dez)~~
   + Jogo do Brasil na Copa (12h)
@@ -82,3 +100,13 @@ Todas as referências das aulas desta disciplina são do livro:
 <br><br>
 * **Aula 1** (31/out)
   + Apresentação da disciplina
+
+## Avaliações Formativas
+
+* **Formativa 2**
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t01_f2_2022_2" target="_blank">https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t01_f2_2022_2</a>
+  + Data de entrega: até 09/jan às 23:59
+
+* **Formativa 1**
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t01_f1_2022_2" target="_blank">https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t01_f1_2022_2</a>
+  + Data de entrega: até 28/nov às 23:59
