Atualizando página de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -34,18 +34,15 @@ Todas as referências das aulas desta disciplina são do livro:
 <br><br>
 * **Aula 9** (19/dez)
   + Caracteres
-  + *Leitura recomendada*:
-    + Seção 2.9
+  + *Leitura recomendada*: Seção 2.9
 <br><br>
 * **Aula 8** (16/dez)
   + Procedimentos
-  + *Leitura recomendada*:
-    + Seção 2.8
+  + *Leitura recomendada*: Seção 2.8
 <br><br>
 * **Aula 7** (12/dez)
   + Desvios condicionais e laços
-  + *Leitura recomendada*:
-    + Seção 2.7
+  + *Leitura recomendada*: Seção 2.7
 <br><br>
 * ~~**Aula 7** (09/dez)~~
   + Jogo do Brasil na Copa (12h)
@@ -56,8 +53,7 @@ Todas as referências das aulas desta disciplina são do livro:
 * **Aula 6** (02/dez)
   + Formato das instruções (R e I)
   + Instruções lógicas e de deslocamento
-  + *Leitura recomendada*:
-    + Seções 2.5 e 2.6
+  + *Leitura recomendada*: Seções 2.5 e 2.6
 <br><br>
 * ~~**Aula 6** (28/nov)~~
   + Professor em licença paternidade
