Atualizando página de EDA-2

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,7 +21,20 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 10** (09/jan)
+  + Avaliação Somativa 1
+<br><br>
+* **Aula 9** (06/jan)
+<br><br>
+* **Aula 8** (19/dez)
+  + Tabelas Hash
+  + *Leitura recomendada*: <a href="https://www.brunoribas.com.br/eda2/2022-1/apostila/hashtable.html" target="_blank">Tabela Hash</a> (Prof. Bruno Ribas)
+<br><br>
 * **Aula 7** (16/dez)
+  + Quicksort
+    + Função `quicksort`
+    + Mediana de 3 (para resolver a complexidade de pior caso)
+  + *Leitura recomendada*: <a href="https://www.brunoribas.com.br/eda2/2022-1/apostila/quicksort.html" target="_blank">Quicksort</a> (Prof. Bruno Ribas)
 <br><br>
 * **Aula 6** (12/dez)
   + Quicksort
@@ -90,6 +103,14 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Avaliações formativas
 
-+ **Avaliação Formativa 1**: Revisão de listas encadeadas e ordenação simples
-  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f1_2022_2" target="_blank">CD-MOJ</a>
++ **Formativa 3**: Tabelas Hash
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f3_2022_2" target="_blank">https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f3_2022_2</a>
+  + Entrega: até 10/jan às 23:59
+<br><br>
++ **Formativa 2**: Ordenação *O(n lg n)*
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f2_2022_2" target="_blank">https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f2_2022_2</a>
+  + Entrega: até 10/jan às 23:59
+<br><br>
++ **Formativa 1**: Revisão de listas encadeadas e ordenação simples
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f1_2022_2" target="_blank">https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f1_2022_2</a>
   + Entrega: até 18/nov às 23:59
