Atualizando página de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -31,6 +31,8 @@ Todas as referências das aulas desta disciplina são do livro:
   + Avaliação Somativa 1
 <br><br>
 * **Aula 10** (06/jan)
+  + Revisão
+  + Comentários sobre os exercícios da Formativa 2
 <br><br>
 * **Aula 9** (19/dez)
   + Caracteres
