Atualizando página de EDA-2

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -25,6 +25,8 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
   + Avaliação Somativa 1
 <br><br>
 * **Aula 9** (06/jan)
+  + Revisão
+  + Comentários nos exercícios da Formativa 2
 <br><br>
 * **Aula 8** (19/dez)
   + Tabelas Hash
