Atualizando página de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,6 +27,16 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 14** (20/jan)
+<br><br>
+* **Aula 13** (16/jan)
+  + Representação de ponto flutuante
+<br><br>
+* **Aula 12** (13/jan)
+  + Comentários sobre a Avaliação Somativa 1
+  + Detecção de *overflow* na adição
+  + *Leitura recomendada*: Seções 3.1 e 3.2
+<br><br>
 * **Aula 11** (09/jan)
   + Avaliação Somativa 1
 <br><br>
