--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,6 +21,12 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 13** (20/jan)
+<br><br>
+* **Aula 12** (16/jan)
+<br><br>
+* **Aula 11** (13/jan)
+<br><br>
 * **Aula 10** (09/jan)
   + Avaliação Somativa 1
 <br><br>
