--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,7 +27,13 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 15** (23/jan)
+<br><br>
 * **Aula 14** (20/jan)
+  + Representação de ponto flutuante
+  + *Leitura recomendada*:
+    + Seção 3.5
+    + [Slides](3_aritmetica_computacional_aula-05.pdf)
 <br><br>
 * **Aula 13** (16/jan)
   + Representação de ponto flutuante
