Atualizando página de EDA-2

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,11 +21,19 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 14** (23/jan)
+<br><br>
 * **Aula 13** (20/jan)
+  + Filas de prioridade e Heap
+  + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade21-fila-prioridade.pdf" target="_blank">Slides</a>/<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade21-fila-prioridade-handout.pdf" target="_blank">Handout</a> (Prof. Rafael Schouery)
 <br><br>
 * **Aula 12** (16/jan)
+  + Árvores Binárias de Busca
+  + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade18-arvores-busca.pdf" target="_blank">Slides</a>/<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade18-arvores-busca-handout.pdf" target="_blank">Handout</a> (Prof. Rafael Schouery)
 <br><br>
 * **Aula 11** (13/jan)
+  + Árvores Binárias
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bint.html" target="_blank">Árvores binária</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 10** (09/jan)
   + Avaliação Somativa 1
