Atualizando página de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -28,6 +28,10 @@ Todas as referências das aulas desta disciplina são do livro:
 ## Aulas
 
 * **Aula 15** (23/jan)
+  + Caminho de dados de um processador
+  + *Leitura recomendada*:
+    + Seções 4.1 a 4.3
+    + [Slides](4_arquitetura-processador_aula01.pdf)
 <br><br>
 * **Aula 14** (20/jan)
   + Representação de ponto flutuante
