Atualizando página de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,6 +27,18 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 17** (30/jan)
+  + Introdução ao pipeline
+  + *Leitura recomendada*:
+    + Seção 4.5
+    + [Slides](4_arquitetura-processador_aula03.pdf)
+<br><br>
+* **Aula 16** (27/jan)
+  + Controle no caminho de dados
+  + *Leitura recomendada*:
+    + Seção 4.4
+    + [Slides](4_arquitetura-processador_aula02.pdf)
+<br><br>
 * **Aula 15** (23/jan)
   + Caminho de dados de um processador
   + *Leitura recomendada*:
