Atualizando página de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -29,9 +29,11 @@ Todas as referências das aulas desta disciplina são do livro:
 
 * **Aula 17** (30/jan)
   + Introdução ao pipeline
+  + Caminho e controle no pipeline
   + *Leitura recomendada*:
-    + Seção 4.5
-    + [Slides](4_arquitetura-processador_aula03.pdf)
+    + Seções 4.5 e 4.6
+    + [Slides (parte 1)](4_arquitetura-processador_aula03.pdf)
+    + [Slides (parte 2)](4_arquitetura-processador_aula04.pdf)
 <br><br>
 * **Aula 16** (27/jan)
   + Controle no caminho de dados
