Atualizando página de EDA

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,6 +21,14 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 16** (30/jan)
+  + Percursos em grafos
+  + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade27-grafos-percursos.pdf" target="_blank">Slides</a>/<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade27-grafos-percursos-handout.pdf" target="_blank">Handout</a> (Prof. Rafael Schouery)
+<br><br>
+* **Aula 15** (27/jan)
+  + Representação de grafos
+  + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade26-grafos-estrutura.pdf" target="_blank">Slides</a>/<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade26-grafos-estrutura-handout.pdf" target="_blank">Handout</a> (Prof. Rafael Schouery)
+<br><br>
 * **Aula 14** (23/jan)
   + Representação de grafos
   + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade26-grafos-estrutura.pdf" target="_blank">Slides</a>/<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade26-grafos-estrutura-handout.pdf" target="_blank">Handout</a> (Prof. Rafael Schouery)
