Atualizando páginas das disciplinas

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,8 +21,15 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 18** (06/fev)
+<br><br>
+* **Aula 17** (03/fev)
+  + Ciclos, árvores, florestas
+  + Busca em profundidade e em largura
+<br><br>
 * **Aula 16** (30/jan)
-  + Percursos em grafos
+  + Caminhos em grafos
+  + Componentes conexas
   + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade27-grafos-percursos.pdf" target="_blank">Slides</a>/<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade27-grafos-percursos-handout.pdf" target="_blank">Handout</a> (Prof. Rafael Schouery)
 <br><br>
 * **Aula 15** (27/jan)
