--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,6 +27,13 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 19** (06/fev)
+<br><br>
+* **Aula 18** (03/fev)
+  + Introdução à hierarquia de memória
+  + Tecnologias de memória
+  + *Leitura recomendada*: Seções 5.1 e 5.2
+<br><br>
 * **Aula 17** (30/jan)
   + Introdução ao pipeline
   + Caminho e controle no pipeline
