Atualizando página de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -27,6 +27,15 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 22** (17/fev)
+  + Avaliação Somativa Substitutiva
+    + Clique <a href="https://forms.microsoft.com/r/MAnYAhEnmS" target="_blank">aqui</a> para solicitar participação
+<br><br>
+* **Aula 21** (13/fev)
+  + Avaliação Somativa 3
+<br><br>
+* **Aula 20** (10/fev)
+<br><br>
 * **Aula 19** (06/fev)
 <br><br>
 * **Aula 18** (03/fev)
