--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,20 +21,21 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
-* **Aula 21** (17/fev)
+* **Aula 20** (17/fev)
   + Avaliação Somativa Substitutiva
     + Clique <a href="https://forms.microsoft.com/Pages/ResponsePage.aspx?id=oZs17AtjK024M8jm1I-AWQT_ybU_kgJFrAR3sKwXT1BUM1hPVE8yMTRQMk8wODdCSFk5N0tHTTFPWi4u" target="_blank">aqui</a> para solicitar participação
 <br><br>
-* **Aula 20** (13/fev)
+* **Aula 19** (13/fev)
   + Avaliação Somativa 2
 <br><br>
-* **Aula 19** (10/fev)
+* **Aula 18** (10/fev)
 <br><br>
-* **Aula 18** (06/fev)
-<br><br>
-* **Aula 17** (03/fev)
+* **Aula 17** (06/fev)
   + Ciclos, árvores, florestas
   + Busca em profundidade e em largura
+<br><br>
+* ~~**Aula 17** (03/fev)~~
+  + Falta de energia na FGA
 <br><br>
 * **Aula 16** (30/jan)
   + Caminhos em grafos
