--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -19,6 +19,10 @@ exclude: true
 
 Clique <a href="plano_fac_2022_2.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Notas
+
+Clique [aqui](notas.html) para acessar a planilha de notas.
+
 ## Livro-texto
 
 Todas as referências das aulas desta disciplina são do livro:
