Adicionando notas de FAC

--- a/ensino/fac-2022-2.md
+++ b/ensino/fac-2022-2.md
@@ -21,7 +21,7 @@ Clique <a href="plano_fac_2022_2.pdf" target="_blank">aqui</a> para acessar o pl
 
 ## Notas
 
-Clique [aqui](notas.html) para acessar a planilha de notas.
+Clique [aqui](notas.htm) para acessar a planilha de notas.
 
 ## Livro-texto
 
