Adicionando notas de EDA-2

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -19,6 +19,10 @@ exclude: true
 
 Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o plano de ensino.
 
+## Notas
+
+Clique [aqui](notas.htm) para acessar a planilha de notas.
+
 ## Aulas
 
 * **Aula 20** (17/fev)
