Atualizando notas de EDA-2

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -21,7 +21,7 @@ Clique <a href="plano_eda2_22_2.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Notas
 
-Clique [aqui](notas.htm) para acessar a planilha de notas.
+Clique [aqui](notas.htm) para acessar a planilha de notas parciais.
 
 ## Aulas
 
