Atualizando página de FAC

--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -27,5 +27,35 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 4** (12/abr)
+<br><br>
+* **Aula 3** (05/abr)
+  + <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f1_2023_1" target="_blank">Avaliação Formativa 1</a>
+<br><br>
+* **Aula 2** (31/mar)
+  + Linguagem de montagem
+    + Instruções aritméticas
+    + Registradores
+    + Estrutura de um programa em assembly MIPS
+    + Pseudoinstruções úteis
+    + *Syscalls*
+  + *Leitura recomendada*:
+    + Seções 2.1 e 2.2
+    + <a href="2_linguagem_montagem_aula-01.pdf" target="_blank">Slides</a>
+    + <a href="https://www.doc.ic.ac.uk/lab/secondyear/spim/node8.html" target="_blank">Tabela de *syscalls*</a>
+    + <a href="https://docs.microsoft.com/pt-br/windows/wsl/install" target="_blank">Como instalar o WSL</a>
+    + <a href="https://spimsimulator.sourceforge.net/" target="_blank">Simulador SPIM</a>
+    + <a href="https://learn.microsoft.com/pt-br/windows/wsl/tutorials/wsl-vscode">Usando VSCode e WSL</a>
+<br><br>
 * **Aula 1** (29/mar)
   + Apresentação da disciplina
+  + Introdução à arquitetura de computadores
+  + *Leitura recomendada*
+    + Seções 1.3 a 1.5
+    + <a href="1_introducao.pdf" target="_blank">Slides</a>
+
+## Avaliações Formativas
+
+* **Formativa 1**
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f1_2023_1" target="_blank">CD-MOJ</a>
+  + Disponível até 13/abr às 23h59
