Atualizando página de FAC

--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -45,7 +45,7 @@ Todas as referências das aulas desta disciplina são do livro:
     + <a href="https://www.doc.ic.ac.uk/lab/secondyear/spim/node8.html" target="_blank">Tabela de *syscalls*</a>
     + <a href="https://docs.microsoft.com/pt-br/windows/wsl/install" target="_blank">Como instalar o WSL</a>
     + <a href="https://spimsimulator.sourceforge.net/" target="_blank">Simulador SPIM</a>
-    + <a href="https://learn.microsoft.com/pt-br/windows/wsl/tutorials/wsl-vscode">Usando VSCode e WSL</a>
+    + <a href="https://learn.microsoft.com/pt-br/windows/wsl/tutorials/wsl-vscode" target="_blank">Usando VSCode e WSL</a>
 <br><br>
 * **Aula 1** (29/mar)
   + Apresentação da disciplina
