Atualizando página de EDA-2

--- a/ensino/eda2-2022-2.md
+++ b/ensino/eda2-2022-2.md
@@ -4,7 +4,7 @@ excerpt: "EDA-2 (2022-2)"
 exclude: true
 ---
 
-**Estruturas de Dados II - 2º Semestre de 2022**
+**Estruturas de Dados 2 - 2º Semestre de 2022**
 
 * **Professor**: John L. Gardenghi
   + Sala 22
