--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -1,10 +1,10 @@
 ---
 layout: page
-excerpt: "EDA-2 (2022-2)"
+excerpt: "EDA-2 (2023-1)"
 exclude: true
 ---
 
-**Estruturas de Dados II - 1º Semestre de 2023**
+**Estruturas de Dados 2 - 1º Semestre de 2023**
 
 * **Professor**: John L. Gardenghi
   + Sala 22
@@ -21,6 +21,30 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 4** (12/abr)
+<br><br>
+* **Aula 3** (05/abr)
+  + Revisão de Listas Encadeadas
+  + <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f1_2023_1" target="_blank">Avaliação Formativa 1</a>
+<br><br>
+* **Aula 2** (31/mar)
+  + Revisão de ponteiros
+  + *Leitura recomendada*
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/pont.html" target="_blank">Endereços e ponteiros</a>
+  + *Vídeos sugeridos*
+    + <a href="https://youtu.be/r3ooCq07dOA" target="_blank">Revisão de ponteiros</a>
+    + Aplicações de ponteiros:
+      + <a href="https://web.microsoftstream.com/video/0b127270-4078-465c-96e9-c0b60b84a2ec" target="_blank">Passagem de parâmetros</a>
+      + <a href="https://web.microsoftstream.com/video/d13206d2-ad31-4343-9515-8b7a075314da" target="_blank">Alocação dinâmica de memória</a>
+      + <a href="https://web.microsoftstream.com/video/24a54429-1540-4d47-b5b1-f75a035d2f57" target="_blank">Ponteiros e vetores</a>
+      + <a href="https://web.microsoftstream.com/video/3fa477cc-bd11-47ca-ba8c-ee7e5ba470f5" target="_blank">Ponteiros para funções</a>
+<br><br>
 * **Aula 1** (29/mar)
   + Apresentação da disciplina
   + Revisão
+
+## Avaliações Formativas
+
+* **Formativa 1**
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f1_2023_1" target="_blank">CD-MOJ</a>
+  + Disponível até 13/abr às 23h59
