Atualização página de FAC

--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -27,7 +27,24 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 6** (19/abr)
+<br><br>
+* **Aula 5** (14/abr)
+  + Linguagem de montagem
+    + Representação de inteiros binários
+    + Extensão de sinal
+    + Formato de instruções
+    + Operações lógicas e deslocamento
+  + *Leitura recomendada*:
+    + Seções 2.4 e 2.5
+<br><br>
 * **Aula 4** (12/abr)
+  + Linguagem de montagem
+    + Instruções de acesso à memória
+    + Instruções imediatas
+  + *Leitura recomendada*:
+    + Seção 2.3
+    + <a href="2_linguagem_montagem_aula-02.pdf" target="_blank">Slides</a>
 <br><br>
 * **Aula 3** (05/abr)
   + <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f1_2023_1" target="_blank">Avaliação Formativa 1</a>
