Atualização página de EDA-2

--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -21,7 +21,28 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 6** (26/abr)
+<br><br>
+* ~~**Aula 6** (19/abr)~~
+  + Aula cancelada
+<br><br>
+* **Aula 5** (14/abr)
+  + Análise de complexidade
+  + *Leitura recomendada*:
+    + <a href="https://www.ime.usp.br/~pf/analise_de_algoritmos/aulas/Oh.html" target="_blank">Comparação assintótica de funções</a>
+    + <a href="https://en.wikipedia.org/wiki/Big_O_notation" target="_blank">Artigo na Wikipedia</a> sobre notação assintótica
+    + <a href="https://towardsdatascience.com/the-math-behind-big-o-and-other-asymptotic-notations-64487889f33f" target="_blank">A matemática por trás da notação Big-O</a>
+    + Problemas do milênio
+      + <a href="https://pt.wikipedia.org/wiki/Problemas_do_Pr%C3%A9mio_Millennium" target="_blank">Wikipedia</a>
+      + <a href="https://www.claymath.org/millennium-problems/millennium-prize-problems" target="_blank">Página oficial</a>
+<br><br>
 * **Aula 4** (12/abr)
+  + Revisão de Listas Encadeadas
+    + Definição
+    + Operações
+    + Dúvidas sobre Avaliação Formativa 1
+  + *Material relacionado*: <a href="mescla_lista.c">Código Mescla Listas</a>
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/lista.html" target="_blank">Listas encadeadas</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 3** (05/abr)
   + Revisão de Listas Encadeadas
