Atualização página de FAC

--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -27,7 +27,22 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 7** (26/abr)
+  + Linguagem de montagem
+    + Procedimentos
+    + Caracteres
+  + *Leitura recomendada*:
+    + Seções 2.8 e 2.9
+    + <a href="2_linguagem_montagem_aula-05.pdf" target="_blank">Slides</a>
+<br><br>
 * **Aula 6** (19/abr)
+  + Linguagem de montagem
+    + Instruções de desvio
+    + Laços
+    + Introdução a procedimentos
+  + *Leitura recomendada*:
+    + Seções 2.6 e 2.7
+    + <a href="2_linguagem_montagem_aula-04.pdf" target="_blank">Slides</a> 
 <br><br>
 * **Aula 5** (14/abr)
   + Linguagem de montagem
@@ -37,6 +52,7 @@ Todas as referências das aulas desta disciplina são do livro:
     + Operações lógicas e deslocamento
   + *Leitura recomendada*:
     + Seções 2.4 e 2.5
+    + <a href="2_linguagem_montagem_aula-03.pdf" target="_blank">Slides</a>
 <br><br>
 * **Aula 4** (12/abr)
   + Linguagem de montagem
