Atualização página de FAC

--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -27,12 +27,19 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 8** (28/abr)
+  + Linguagem de montagem
+    + Caracteres
+    + Formas de endereçamento
+  + *Leitura recomendada*:
+    + Seção 2.9
+    + <a href="2_linguagem_montagem_aula-06.pdf" target="_blank">Slides</a>
+<br><br>
 * **Aula 7** (26/abr)
   + Linguagem de montagem
     + Procedimentos
-    + Caracteres
   + *Leitura recomendada*:
-    + Seções 2.8 e 2.9
+    + Seção 2.8
     + <a href="2_linguagem_montagem_aula-05.pdf" target="_blank">Slides</a>
 <br><br>
 * **Aula 6** (19/abr)
