--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -21,7 +21,24 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 9** (05/mai)
+  + Avaliação Somativa 1
+<br><br>
+* **Aula 8** (03/mai)
+<br><br>
+* **Aula 7** (28/abr)
+  + Tabelas de Dispersão (*Hash*)
+    + Colisões: Encadeamento separado ([código](hash_encadeamento.c))
+  + *Leitura recomendada*:
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Tabelas Hash</a> (Prof. Feofiloff)
+    + <a href="https://www.brunoribas.com.br/apostila-eda/hashtable.html" target="_blank">Hash</a> (Prof. Bruno Ribas)
+<br><br>
 * **Aula 6** (26/abr)
+  + Tabelas de Dispersão (*Hash*)
+    + Conceito
+    + Problema exemplo
+    + *Hash* com endereçamento direto
+    + Função *hash* modular
 <br><br>
 * ~~**Aula 6** (19/abr)~~
   + Aula cancelada
@@ -66,6 +83,16 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Avaliações Formativas
 
-* **Formativa 1**
+* **Formativa 2** - Tabelas de Dispersão
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f2_2023_1" target="_blank">CD-MOJ</a>
+  + Disponível até 10/mai às 23h59
+<br><br>
+* **Formativa 1** - Listas encadeadas
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f1_2023_1" target="_blank">CD-MOJ</a>
   + Disponível até 13/abr às 23h59
+
+## Refências básicas
+
+* <a href="https://www.ime.usp.br/~pf/algoritmos/index.html" target="_blank">Projeto de Algoritmos</a> (Prof. Paulo Feofiloff)
+<br><br>
+* <a href="https://www.brunoribas.com.br/apostila-eda/" target="_blank">Apostila de EDA-1 e EDA-2</a> (Prof. Bruno Ribas)
