Atualizando página de EDA-2

--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -25,6 +25,11 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
   + Avaliação Somativa 1
 <br><br>
 * **Aula 8** (03/mai)
+  + Tabelas de Dispersão (*Hash*)
+    + Colisões: Endereçamento aberto
+  + *Leitura recomendada*:
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Tabelas Hash</a> (Prof. Feofiloff)
+    + <a href="https://www.brunoribas.com.br/apostila-eda/hashtable.html" target="_blank">Hash</a> (Prof. Bruno Ribas)
 <br><br>
 * **Aula 7** (28/abr)
   + Tabelas de Dispersão (*Hash*)
@@ -39,6 +44,9 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
     + Problema exemplo
     + *Hash* com endereçamento direto
     + Função *hash* modular
+  + *Leitura recomendada*:
+    + <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/hash.html" target="_blank">Tabelas Hash</a> (Prof. Feofiloff)
+    + <a href="https://www.brunoribas.com.br/apostila-eda/hashtable.html" target="_blank">Hash</a> (Prof. Bruno Ribas)
 <br><br>
 * ~~**Aula 6** (19/abr)~~
   + Aula cancelada
@@ -91,7 +99,7 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_eda2_t01_f1_2023_1" target="_blank">CD-MOJ</a>
   + Disponível até 13/abr às 23h59
 
-## Refências básicas
+## Referências básicas
 
 * <a href="https://www.ime.usp.br/~pf/algoritmos/index.html" target="_blank">Projeto de Algoritmos</a> (Prof. Paulo Feofiloff)
 <br><br>
