--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -21,6 +21,20 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 12** (17/mai)
+  + Árvores binárias de busca
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/binst.html" target="_blank"></a> (Prof. Paulo Feofiloff)
+<br><br>
+* **Aula 11** (12/mai)
+  + Árvores binárias
+  + Percursos e árvores binárias: pré, em e pós.
+  + Implementação de árvores usando listas encadeadas
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/bint.html" target="_blank">Árvores binárias</a> (Prof. Paulo Feofiloff)
+<br><br>
+* **Aula 10** (10/mai)
+  + Revisão da Somativa 1
+  + Árvores: conceitos
+<br><br>
 * **Aula 9** (05/mai)
   + Avaliação Somativa 1
 <br><br>
