--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -23,7 +23,7 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 * **Aula 12** (17/mai)
   + Árvores binárias de busca
-  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/binst.html" target="_blank"></a> (Prof. Paulo Feofiloff)
+  + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/binst.html" target="_blank">Árvores binárias de busca</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 11** (12/mai)
   + Árvores binárias
