--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -21,8 +21,16 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 14** (24/mai)
+<br><br>
+* **Aula 13** (19/mai)
+  + Árvores binárias de busca
+     + Operações: busca, inserção, mínimo
+<br><br>
 * **Aula 12** (17/mai)
   + Árvores binárias de busca
+     + Conceito
+     + Implementação
   + *Leitura recomendada*: <a href="https://www.ime.usp.br/~pf/algoritmos/aulas/binst.html" target="_blank">Árvores binárias de busca</a> (Prof. Paulo Feofiloff)
 <br><br>
 * **Aula 11** (12/mai)
