--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -27,6 +27,61 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
+* **Aula 15** (24/mai)
+  + Aritmética computacional
+    + Representação de ponto flutuante
+    + Operações com ponto flutuante
+    + Instruções
+  + *Leitura recomendada*:
+    + Seção 3.5
+    + <a href="3_aritmetica_computacional_aula-06.pdf" target="_blank">Slides</a>
+<br><br>
+* **Aula 14** (19/mai)
+  + Aritmética computacional
+    + Representação de ponto flutuante
+  + *Leitura recomendada*:
+    + Seção 3.5
+    + <a href="3_aritmetica_computacional_aula-05.pdf" target="_blank">Slides</a>
+<br><br>
+* **Aula 13** (17/mai)
+  + Aritmética computacional
+    + Algoritmo de divisão
+  + *Leitura recomendada*:
+    + Seção 3.4
+    + <a href="3_aritmetica_computacional_divisao.pdf" target="_blank">Slides</a>
+  + *Vídeos*:
+    + <a href="https://web.microsoftstream.com/video/03b73fa4-01e6-416c-adb1-47f6cbeda37e" target="_blank">Algoritmo básico de divisão</a>
+    + <a href="https://web.microsoftstream.com/video/b1de2f64-a18c-4b00-af43-fbedc0386d58" target="_blank">Algoritmo otimizado de divisão</a>
+    + <a href="https://web.microsoftstream.com/video/425f1e30-f809-4df8-91ea-caed5bbfe695" target="_blank">Instruções no *assembly* MIPS</a>
+<br><br>
+* **Aula 12** (12/mai)
+  + Aritmética computacional
+    + Algoritmo de multiplicação
+  + *Leitura recomendada*:
+    + Seção 3.3
+    + <a href="3_aritmetica_computacional_multiplicacao.pdf" target="_blank">Slides</a>
+  + *Vídeos*:
+    + <a href="https://web.microsoftstream.com/video/02256e1c-da44-4922-9c92-89f5e215877e" target="_blank">Algoritmo básico de multiplicação</a>
+    + <a href="https://web.microsoftstream.com/video/b6cf4c79-aa3e-4ceb-bc8b-492fd1657383" target="_blank">Algoritmo otimizado de multiplicação</a>
+    + <a href="https://web.microsoftstream.com/video/54787ccb-df96-45fe-8a1f-4b4b06a612f7" target="_blank">Instruções no *assembly* MIPS</a>
+<br><br>
+* **Aula 11** (10/mai)
+  + Aritmética computacional
+    + Código para detecção de overflow
+    + Introdução ao algoritmo de multiplicação
+<br><br>
+* **Aula 10** (05/mai)
+  + Avaliação Somativa 1
+<br><br>
+* **Aula 9** (03/mai)
+  + Aritmética computacional
+    + Representação de inteiros
+    + Representação de sinais
+    + Detecção de overflow em inteiros
+  + *Leitura recomendada* :
+    + Seções 3.1 e 3.2
+    + <a href="3_aritmetica_computacional_aula-01.pdf" target="_blank">Slides</a>
+<br><br>
 * **Aula 8** (28/abr)
   + Linguagem de montagem
     + Caracteres
