--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -151,6 +151,10 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Avaliações Formativas
 
+* **Formativa 2**
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f2_2023_1" target="_blank">CD-MOJ</a>
+  + Disponível até 15/mai às 23h59
+<br><br>
 * **Formativa 1**
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f1_2023_1" target="_blank">CD-MOJ</a>
   + Disponível até 13/abr às 23h59
