--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -21,7 +21,12 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 15** (26/mai)
+  + Árvores rubro-negras esquerdistas
+  + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade19-arvores-balanceadas.pdf" target="_blank">Slides</a>(<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade19-arvores-balanceadas-handout.pdf" target="_blank">Handout</a>) (Prof. Rafael Schouery)
 * **Aula 14** (24/mai)
+  + Árvores binárias de busca
+    + Remoção
 <br><br>
 * **Aula 13** (19/mai)
   + Árvores binárias de busca
