--- a/ensino/eda2-2023-1.md
+++ b/ensino/eda2-2023-1.md
@@ -21,9 +21,24 @@ Clique <a href="plano_eda2_23_1.pdf" target="_blank">aqui</a> para acessar o pla
 
 ## Aulas
 
+* **Aula 19** (14/jun)
+<br><br>
+* **Aula 18** (07/jun)
+  + Avaliação Somativa 2
+<br><br> 
+* **Aula 17** (02/jun)
+  + Árvores rubro-negras esquerdistas
+    +  Inserção
+<br><br>
+* **Aula 16** (31/mai)
+  + Árvores rubro-negras esquerdistas
+     + Inserção
+<br><br>
 * **Aula 15** (26/mai)
   + Árvores rubro-negras esquerdistas
+     + Conceitos
   + *Leitura recomendada*: <a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade19-arvores-balanceadas.pdf" target="_blank">Slides</a>(<a href="https://www.ic.unicamp.br/~rafael/cursos/2s2019/mc202/slides/unidade19-arvores-balanceadas-handout.pdf" target="_blank">Handout</a>) (Prof. Rafael Schouery)
+<br><br>
 * **Aula 14** (24/mai)
   + Árvores binárias de busca
     + Remoção
