--- a/ensino/fpo-2023-1.md
+++ b/ensino/fpo-2023-1.md
@@ -15,7 +15,7 @@ exclude: true
 
 ## Plano de Ensino
 
-# Aulas
+### Aulas
 
 As aulas acontecerão presencialmente no Módulo 14, no subsolo do ICC Centro, das 8h às 12h.
 
@@ -29,7 +29,7 @@ Será disponibilizado um [**trabalho**](#trabalho), cuja nota comporá 70% da no
 
 *As listas e o trabalho deverão ser feitas em grupo de no mínimo 2 alunos e no máximo, 3**.
 
-# Referências bibliográficas
+### Referências bibliográficas
 
 * LACHTERMACHER, G. Pesquisa Operacional na Tomada de Decis˜oes. 5 ed. Rio de Janeiro: LTC, 2018. Disponível em: <a href="https://integrada.minhabiblioteca.com.br/books/9788521630494">Minha biblioteca</a>.
 
@@ -57,9 +57,11 @@ Será disponibilizado um [**trabalho**](#trabalho), cuja nota comporá 70% da no
 
 ## Listas de Exercícios
 
-# Instruções de entrega
+### Instruções de entrega
 
 A resolução das listas deverá ser enviado em formato PDF para o e-mail john.gardenghi@unb.br com o assunto: "[FPO] Lista N", onde N é o número da lista.
+
+### Enunciados
 
 * **Lista 1**
   + [Enunciado](l1_modelagem.pdf)
