--- a/ensino/fpo-2023-1.md
+++ b/ensino/fpo-2023-1.md
@@ -19,7 +19,7 @@ exclude: true
 
 As aulas acontecerão presencialmente no Módulo 14, no subsolo do ICC Centro, das 8h às 12h.
 
-# Conteúdo e avaliação
+### Conteúdo e avaliação
 
 O conteúdo será expositivo. O conteúdo de cada aula é listada na seção [Aulas](#aulas).
 
@@ -31,7 +31,7 @@ Será disponibilizado um [**trabalho**](#trabalho), cuja nota comporá 70% da no
 
 ### Referências bibliográficas
 
-* LACHTERMACHER, G. Pesquisa Operacional na Tomada de Decis˜oes. 5 ed. Rio de Janeiro: LTC, 2018. Disponível em: <a href="https://integrada.minhabiblioteca.com.br/books/9788521630494">Minha biblioteca</a>.
+* LACHTERMACHER, G. Pesquisa Operacional na Tomada de Decisõees. 5 ed. Rio de Janeiro: LTC, 2018. Disponível em: <a href="https://integrada.minhabiblioteca.com.br/books/9788521630494">Minha biblioteca</a>.
 
 ## Aulas
 
@@ -54,6 +54,9 @@ Será disponibilizado um [**trabalho**](#trabalho), cuja nota comporá 70% da no
   + Definição de Pesquisa Operacional
   + Introdução à modelagem de problemas
   + Resolução gráfica de problemas
+  + *Leitura recomendada*
+    + Capítulo 1 de Lachtermacher, 2018.
+    + <a href="https://sites.icmc.usp.br/mari/segundo2011/aula1IPO.pdf" target="_blank">Slides</a> da Prof.ª Maristela Santos.
 
 ## Listas de Exercícios
 
