--- a/ensino/fpo-2023-1.md
+++ b/ensino/fpo-2023-1.md
@@ -27,11 +27,11 @@ Serão disponibilizadas [**listas de exercícios**](#listas-de-exercícios). A c
 
 Será disponibilizado um [**trabalho**](#trabalho), cuja nota comporá 70% da nota final na disciplinas.
 
-*As listas e o trabalho deverão ser feitas em grupo de no mínimo 2 alunos e no máximo, 3**.
+*As listas e o trabalho deverão ser feitas em grupo de no mínimo 2 alunos e no máximo, 3*.
 
 ### Referências bibliográficas
 
-* LACHTERMACHER, G. Pesquisa Operacional na Tomada de Decisõees. 5 ed. Rio de Janeiro: LTC, 2018. Disponível em: <a href="https://integrada.minhabiblioteca.com.br/books/9788521630494">Minha biblioteca</a>.
+* LACHTERMACHER, G. Pesquisa Operacional na Tomada de Decisões. 5 ed. Rio de Janeiro: LTC, 2018. Disponível em: <a href="https://integrada.minhabiblioteca.com.br/books/9788521630494">Minha biblioteca</a>.
 
 ## Aulas
 
