Atualizando página de FAC

--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -27,7 +27,26 @@ Todas as referências das aulas desta disciplina são do livro:
 
 ## Aulas
 
-* **Aula 15** (24/mai)
+* **Aula 19** (14/jun)
+<br><br>
+* **Aula 18** (07/jun)
+  + Avaliação Somativa 2
+<br><br>
+* **Aula 17** (02/jun)
+  + Arquitetura do processador
+    + Controle no processador
+  + *Leitura recomendada*:
+    + Seção 4.4
+    + <a href="4_arquitetura-processador_aula02.pdf" target="_blank">Slides</a>
+<br><br>
+* **Aula 16** (31/mai)
+  + Arquitetura do processador
+    + Caminho de dados de um processador
+  + *Leitura recomendada*:
+    + Seções 4.1 a 4.3
+    + <a href="4_arquitetura-processador_aula01.pdf" target="_blank">Slides</a>
+www<br><br>
+* **Aula 15** (26/mai)
   + Aritmética computacional
     + Representação de ponto flutuante
     + Operações com ponto flutuante
@@ -35,6 +54,8 @@ Todas as referências das aulas desta disciplina são do livro:
   + *Leitura recomendada*:
     + Seção 3.5
     + <a href="3_aritmetica_computacional_aula-06.pdf" target="_blank">Slides</a>
+<br><br>
+* ~~**Aula 15** (24/mai)~~
 <br><br>
 * **Aula 14** (19/mai)
   + Aritmética computacional
