Atualizando página de FAC

--- a/ensino/fac-2023-1.md
+++ b/ensino/fac-2023-1.md
@@ -172,6 +172,10 @@ www<br><br>
 
 ## Avaliações Formativas
 
+* **Formativa 3**
+  + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f3_2023_1" target="_blank">CD-MOJ</a>
+  + Disponível até 02/jul às 23h59
+<br><br>
 * **Formativa 2**
   + Acesso: <a href="https://moj.naquadah.com.br/cgi-bin/contest.sh/jl_fac_t02_f2_2023_1" target="_blank">CD-MOJ</a>
   + Disponível até 15/mai às 23h59
