--- a/ensino/fpo-2023-1.md
+++ b/ensino/fpo-2023-1.md
@@ -72,4 +72,4 @@ A resolução das listas deverá ser enviado em formato PDF para o e-mail john.g
 
 ## Trabalho
 
-A publicar.
+O enunciado do trabalho pode ser acessado <a href="tabalho_fpo_2023_1.pdf" target="_blank">aqui</a>. O trabalho deve ser feito em grupo de 2 a 3 pessoas.
