Atualizando página de FPO

--- a/ensino/fpo-2023-1.md
+++ b/ensino/fpo-2023-1.md
@@ -48,6 +48,10 @@ Será disponibilizado um [**trabalho**](#trabalho), cuja nota comporá 70% da no
 * **Aula 3** (17/jun)
 <br><br>
 * **Aula 2** (10/jun)
+  + Programação linear
+    + Definições
+    + Resolução analítica usando *Simplex*
+  + *Leitura recomendada*: Seções 1.1 e 1.2 de Lachtermacher, 2018.
 <br><br>
 * **Aula 1** (03/jun)
   + Apresentação da disciplina
