Atualizando página de FPO

--- a/ensino/fpo-2023-1.md
+++ b/ensino/fpo-2023-1.md
@@ -76,4 +76,4 @@ A resolução das listas deverá ser enviado em formato PDF para o e-mail john.g
 
 ## Trabalho
 
-O enunciado do trabalho pode ser acessado <a href="tabalho_fpo_2023_1.pdf" target="_blank">aqui</a>. O trabalho deve ser feito em grupo de 2 a 3 pessoas.
+O enunciado do trabalho pode ser acessado <a href="trabalho_fpo_2023_1.pdf" target="_blank">aqui</a>. O trabalho deve ser feito em grupo de 2 a 3 pessoas.
